# wasm-rust-doodles

hello-websys/: Cargo.toml  Makefile
hello-websys/src/: lib.rs
hello-websys/web/: index.html  index.js
hello-world/: Cargo.toml  Makefile
hello-world/src/: lib.rs
hello-world/web/: index.html  index.js
minimal/: Cargo.toml  Makefile
minimal-wasm_bindgen/: Cargo.toml  Makefile
minimal-wasm_bindgen/web/: index.js
minimal/web/: index.html
