[package]
name = "hello-websys"
version = "0.1.0"
authors = ["Teemu Erkkola <teemu.erkkola@iki.fi>"]

[dependencies]
wasm-bindgen = "0.2.33"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
